--- a/TestApp/package.json
+++ b/TestApp/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^14.9.4",
+    "@react-native-firebase/firestore": "^14.9.4",
+    "babel-plugin-root-import": "^6.6.0",
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.2",
+    "react-native-elements": "^3.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
